try to fix calandar bug on IOS devices

--- a/css/global.css
+++ b/css/global.css
@@ -473,7 +473,7 @@ p {
 #pfp,
 .user-side .icon {
     aspect-ratio: 1 / 1;
-    object-fit: contain;
+    object-fit: cover;
     background-color: var(--dark0);
 }
 
